--- a/countdown.html
+++ b/countdown.html
@@ -17,6 +17,7 @@
     </div>
 
     <script src="countdown.js"></script>
+    <script src="wake.js"></script>
 
     <script>
         const fullscreenBtn = document.getElementById('fullscreen-btn');
